compiler/toc_hir_lowering/tests/snapshots/lowering__lower_constrained_type_unsized-4.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "var _ : 1 .. *"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..14): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..14): []
        StmtItem@(FileId(1), 0..14): ItemId(0)
          ConstVar@(FileId(1), 0..14): var "_"@(FileId(1), 4..5)
            Constrained@(FileId(1), 8..14): end => Unsized(None)
              ExprBody@(FileId(1), 8..9)
                Literal@(FileId(1), 8..9): Integer(1)
error in file FileId(1) at 8..14: cannot use unsized range type here
| error in file FileId(1) for 8..14: unsized range types can only be used in array ranges

