compiler/toc_hir_lowering/tests/snapshots/lowering__lower_constrained_type_unsized.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "var _ : array 1 .. * of int := init(1, 2, 3)"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..44): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..44): []
        StmtItem@(FileId(1), 0..44): ItemId(0)
          ConstVar@(FileId(1), 0..44): var "_"@(FileId(1), 4..5)
            Array@(FileId(1), 8..27): MaybeDyn
              Constrained@(FileId(1), 14..20): end => Unsized(Some(3))
                ExprBody@(FileId(1), 14..15)
                  Literal@(FileId(1), 14..15): Integer(1)
              Primitive@(FileId(1), 24..27): Int
            ExprBody@(FileId(1), 31..44)
error in file FileId(1) at 31..44: unsupported expression
| error in file FileId(1) for 31..44: this expression is not supported yet

