compiler/toc_hir_lowering/tests/snapshots/lowering__lower_enum_type-2.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "type _ : enum(a, b, c, d)"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..25): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..25): []
        StmtItem@(FileId(1), 0..25): ItemId(0)
          Type@(FileId(1), 0..25): "_"@(FileId(1), 5..6)
            Enum@(FileId(1), 9..25): "_"@(FileId(1), 9..25) [ a,b,c,d ]

