compiler/toc_hir_lowering/tests/snapshots/lowering__lower_exit_stmt-3.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: exit

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..4): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..4): []
        Exit@(FileId(1), 0..4)
error in file FileId(1) at 0..4: cannot use `exit` statement here
| error in file FileId(1) for 0..4: can only be used inside of `loop` and `for` statements

