compiler/toc_hir_lowering/tests/snapshots/lowering__lower_exit_stmt.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: loop exit end loop

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..18): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..18): []
        Loop@(FileId(1), 0..18)
          Exit@(FileId(1), 5..9)

